latest Mustafiz course another section and fixing main CSS for alignment and margin

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,12 +10,16 @@ body{
 }
 main{
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
+    flex-direction: column;
+    align-items: center;
 }
 .container{
     background-color: #FFFFFF ;
     width: 870px;
     padding: 30px;
+    border-radius: 5px;
+    margin-top: 21px;
 }
 hr{
     border: 1px solid #D1D1D1;
